--- a/UI base/templates/main_1.html
+++ b/UI base/templates/main_1.html
@@ -16,7 +16,16 @@
 
 	 <p style="margin-left: 50px;">Question:<input type="text" name="question" style="margin-left: 50px;"/></p>
 	<br>
+	<p style="margin-left: 50px;">
+	<label for="models">Choose a Model:</label>
 
+	<select name="models" id="models">
+  	<option value="gpt">GPT-3</option>
+  	<option value="bert">BERT</option>
+  	<option value="roberta">Roberta</option>
+  	<option value="distilbert">Distilbert</option>
+	</select>
+</p>
 	<p><input type="submit" name="option" value="Fetch Answers" style="margin-left: 50px;" /></p>
 </form>
 {% endblock %}
